samples/_failures_safe/1761316643_0e8506_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07097ac0.c: In function ‘main’:
./samples/SAFE/__tmp_07097ac0.c:151:5: error: expected expression at end of input
  151 |     for (
      |     ^~~
./samples/SAFE/__tmp_07097ac0.c:151:5: error: expected declaration or statement at end of input
